Bug 1774805 - Don't use Content-Location base which can't become a url. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D155035

--HG--
extra : rebase_source : 331a0a06be3cee5248e063b2f0df205c0092ffb8
extra : amend_source : f5c8769d95a2ccb5551b25b7632e58a3476809a5